<resources>
    <string name="app_name">Campus Bazar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>

    <string name="menu_shop">Shop</string>
    <string name="menu_category">Category</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_new_products">New Products</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>

    <string name="edit_profile_image_desc">Edit Profile Image</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_mobile">Enter Mobile Number</string>
    <string name="hint_university">Enter University</string>
    <string name="hint_hall">Enter Hall</string>
    <string name="hint_address">Enter Address</string>
    <string name="save">Save</string>
    <string name="app_logo">App Logo</string>

</resources>