<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rifat.campusbazar.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.rifat.campusbazar.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.rifat.campusbazar.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_offers"
        android:name="com.rifat.campusbazar.OffersFragment"
        android:label="@string/menu_offers"
        tools:layout="@layout/fragment_offers" />

    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.rifat.campusbazar.MyOrdersFragment"
        android:label="@string/menu_my_orders"
        tools:layout="@layout/fragment_my_orders" />

    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.rifat.campusbazar.MyCartFragment"
        android:label="@string/menu_my_cart"
        tools:layout="@layout/fragment_my_cart" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.rifat.campusbazar.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.rifat.campusbazar.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_profileEditFragment"
            app:destination="@id/profileEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileEditFragment"
        android:name="com.rifat.campusbazar.ProfileEditFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_profile_edit" />

</navigation>
